Fix negative lookbehind regex for 'keyword-char-class'.

https://bugzilla.gnome.org/show_bug.cgi?id=708113